Refactoredl implementation of SmartBin selection and management features on management site.
 Implemented bin selection with dynamic updates for fill levels, complaint management section with modals for viewing details and assigning workers, and a worker management section with dynamic table population.

--- a/smartbin_select.html
+++ b/smartbin_select.html
@@ -6,68 +6,269 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="smartbin_select_style.css" />
     <title>SmartBin Selection</title>
+    <style>
+      .scrollable-table {
+        max-height: 300px;
+        overflow-y: auto;
+        margin-bottom: 20px;
+      }
+      table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+      }
+      th {
+        background-color: #f2f2f2;
+      }
+      .hoverable {
+        position: relative;
+        cursor: pointer;
+      }
+      .hover-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        padding: 12px;
+        z-index: 1;
+      }
+      .hoverable:hover .hover-content {
+        display: block;
+      }
+
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0,0,0,0.4);
+      }
+      .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+      }
+      .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+      .close:hover,
+      .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+      }
+    </style>
   </head>
- <!-- Navbar -->
- <div class="navbar">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="https://docs.google.com/spreadsheets/d/192QlauwUyoRXXyeJBZ5-Ft0nsQyAdfSNmXzGMBBxRgw/edit?resourcekey#gid=1622371888">Complaints</a></li>
-    </ul>
-  </div>
-
-  <!-- Introduction Section -->
-  <section class="container">
-    <h1>Welcome to SmartBin Portal</h1>
-    <p>Available SmartBins</p>
-  </section>
-
-  <!-- SmartBin Selection Section -->
-  <section class="container">
-    <h2>Select SmartBin</h2>
-    <p>Total weight of all accounts: <span id="totalWeight">0</span> Kg</p>
-    <div class="selection-container">
-      <div class="selection-box" onclick="openSmartBin('D1')">D1</div>
-      <div class="selection-box" onclick="openSmartBin('D2')">D2</div>
-      <div class="selection-box" onclick="openSmartBin('D3')">D3</div>
-      <div class="selection-box" onclick="openSmartBin('D4')">D4</div>
+  <body>
+    <!-- Navbar -->
+    <div class="navbar">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/192QlauwUyoRXXyeJBZ5-Ft0nsQyAdfSNmXzGMBBxRgw/edit?resourcekey#gid=1622371888">Complaints</a></li>
+      </ul>
     </div>
-  </section>
 
-  <script src="smartbin_esp32.js"></script>
+    <!-- Introduction Section -->
+    <section class="container">
+      <h1>Welcome to SmartBin Portal</h1>
+      <p>Available SmartBins</p>
+    </section>
 
-  <script>
-    // Function to calculate the total weight of all accounts
-function calculateTotalWeight() {
-  const accounts = ["D1", "D2", "D3", "D4"];
-  let totalWeight = 0;
-  accounts.forEach((accountId) => {
-    const accountData = localStorage.getItem(accountId);
-    if (accountData) {
-      const account = JSON.parse(accountData);
-      totalWeight += account.movements.reduce(
-        (sum, movement) => sum + movement.weight,
-        0
-      );
-    }
-  });
-  return totalWeight;
-}
+    <!-- SmartBin Selection Section -->
+    <section class="container">
+      <h2>Select SmartBin</h2>
+      <p>Total weight of all accounts: <span id="totalWeight">0</span> Kg</p>
+      <div class="selection-container">
+        <div class="selection-box" id="D1" onclick="openSmartBin('D1')">D1</div>
+        <div class="selection-box" id="D2" onclick="openSmartBin('D2')">D2</div>
+        <div class="selection-box" id="D3" onclick="openSmartBin('D3')">D3</div>
+        <div class="selection-box" id="D4" onclick="openSmartBin('D4')">D4</div>
+      </div>
+    </section>
 
-// Function to update total weight in the HTML
-function updateTotalWeight() {
-  const totalWeightElement = document.getElementById("totalWeight");
-  totalWeightElement.textContent = calculateTotalWeight();
-}
+    <!-- Complaint Management Section -->
+    <section class="container">
+      <h2>Complaint Management</h2>
+      <div class="scrollable-table">
+        <table id="complaintTable">
+          <thead>
+            <tr>
+              <th>Details</th>
+              <th>Problem Type</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Complaint rows will be added here dynamically -->
+          </tbody>
+        </table>
+      </div>
+    </section>
 
-// Function to open SmartBin page
-function openSmartBin(accountId) {
-  window.location.href = `management.html?account=${accountId}`;
-}
+    <!-- Modal for Complaint Details -->
+    <div id="complaintModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Complaint Details</h2>
+        <div id="complaintDetails"></div>
+        <select id="workerSelect">
+          <option value="">Select a worker</option>
+        </select>
+        <button onclick="assignWorker()">Assign Worker</button>
+      </div>
+    </div>
 
-// Update total weight when the page loads
-window.addEventListener("load", updateTotalWeight);
+    <!-- Worker Management Section -->
+    <section class="container">
+      <h2>Worker Management</h2>
+      <div class="scrollable-table">
+        <table id="workerTable">
+          <thead>
+            <tr>
+              <th>Worker ID</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Worker rows will be added here dynamically -->
+          </tbody>
+        </table>
+      </div>
+    </section>
 
-  </script>
-</body>
+    <script src="smartbin_esp32.js"></script>
+    <script>
+      // Existing functions for weight and fill levels
+      function calculateTotalWeight() {
+        const accounts = ["D1", "D2", "D3", "D4"];
+        let totalWeight = 0;
+        accounts.forEach((accountId) => {
+          const accountData = localStorage.getItem(accountId);
+          if (accountData) {
+            const account = JSON.parse(accountData);
+            totalWeight += account.movements.reduce(
+              (sum, movement) => sum + movement.weight,
+              0
+            );
+          }
+        });
+        return totalWeight;
+      }
+
+      function updateTotalWeight() {
+        const totalWeightElement = document.getElementById("totalWeight");
+        totalWeightElement.textContent = calculateTotalWeight();
+      }
+
+      function openSmartBin(accountId) {
+        window.location.href = `management.html?account=${accountId}`;
+      }
+
+      function updateFillLevels() {
+        const accounts = ["D1", "D2", "D3", "D4"];
+        accounts.forEach((accountId) => {
+          const accountData = localStorage.getItem(accountId);
+          if (accountData) {
+            const account = JSON.parse(accountData);
+            const fillPercentage = account.fillLevel;
+            const binElement = document.getElementById(accountId);
+            binElement.style.backgroundColor = fillPercentage >= 90 ? 'red' :
+                                               fillPercentage >= 50 ? 'yellow' :
+                                               'green';
+          }
+        });
+      }
+
+      // New functions for complaint and worker management
+      function addComplaint(details, type, status) {
+        const table = document.getElementById('complaintTable').getElementsByTagName('tbody')[0];
+        const row = table.insertRow();
+        const cellDetails = row.insertCell(0);
+        const cellType = row.insertCell(1);
+        const cellStatus = row.insertCell(2);
+
+        cellDetails.innerHTML = `<button onclick='showComplaintDetails(${JSON.stringify(details)}, "${type}", "${status}")'>View Details</button>`;
+        cellType.textContent = type;
+        cellStatus.textContent = status;
+      }
+
+      function showComplaintDetails(details, type, status) {
+        const modal = document.getElementById('complaintModal');
+        const detailsContainer = document.getElementById('complaintDetails');
+        const workerSelect = document.getElementById('workerSelect');
+
+        detailsContainer.innerHTML = `
+          <p><strong>Name:</strong> ${details.name}</p>
+          <p><strong>Email:</strong> ${details.email}</p>
+          <p><strong>Location:</strong> ${details.gps}</p>
+          <p><strong>Problem Type:</strong> ${type}</p>
+          <p><strong>Status:</strong> ${status}</p>
+          <img src="${details.photo}" alt="Complaint photo" style="max-width: 200px;">
+        `;
+
+        workerSelect.innerHTML = '<option value="">Select a worker</option>';
+        const workers = getAvailableWorkers();
+        workers.forEach(worker => {
+          const option = document.createElement('option');
+          option.value = worker.id;
+          option.textContent = `${worker.id} - ${worker.name}`;
+          workerSelect.appendChild(option);
+        });
+
+        modal.style.display = 'block';
+      }
+
+      function getAvailableWorkers() {
+        return [
+          { id: 'W001', name: 'John Doe' },
+          { id: 'W003', name: 'Jane Smith' }
+        ];
+      }
+
+      function assignWorker() {
+        const workerSelect = document.getElementById('workerSelect');
+        const selectedWorkerId = workerSelect.value;
+        if (selectedWorkerId) {
+          alert(`Worker ${selectedWorkerId} has been assigned to this complaint.`);
+          document.getElementById('complaintModal').style.display = 'none';
+        } else {
+          alert('Please select a worker to assign.');
+        }
+      }
+
+      document.getElementsByClassName('close')[0].onclick = function() {
+        document.getElementById('complaintModal').style.display = 'none';
+      };
+
+      window.onclick = function(event) {
+        const modal = document.getElementById('complaintModal');
+        if (event.target === modal) {
+          modal.style.display = 'none';
+        }
+      };
+
+      // Populate tables dynamically
+      addComplaint({ name: 'User1', email: 'user1@example.com', gps: '123.45, 67.89', photo: 'photo1.jpg' }, 'Overflow', 'Pending');
+      addComplaint({ name: 'User2', email: 'user2@example.com', gps: '234.56, 78.90', photo: 'photo2.jpg' }, 'Damage', 'In Progress');
+      
+      // Call the weight calculation and update functions on page load
+      updateTotalWeight();
+      updateFillLevels();
+    </script>
+  </body>
 </html>
