--- a/user.html
+++ b/user.html
@@ -21,7 +21,7 @@
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="about_form.html">Product & Services</a></li>
             <li><a href="#portfolio">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="">Staff login</a></li>
