--- a/user.html
+++ b/user.html
@@ -24,7 +24,7 @@
             <li><a href="about_form.html">Product & Services</a></li>
             <li><a href="#portfolio">Gallery</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="">Staff login</a></li>
+            <li><a href="">Staff Login</a></li>
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
           <i class="fa-solid fa-ellipsis-vertical" onclick="openmenu()"></i>
