--- a/user.html
+++ b/user.html
@@ -355,7 +355,7 @@
       }
     </script>
 
-    <script>
+    <!-- <script>
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbw25_DVAI-gZVcWD86sSLj0jKxb7yjXO18oFBcGyRNUcK--LG6AR9pVEw0yMLCe4EkZ/exec";
       const form = document.forms["submit-to-google-sheet"];
@@ -382,6 +382,6 @@
           })
           .catch((error) => console.error("Error!", error));
       });
-    </script>
+    </script> -->
   </body>
 </html>
