--- a/user.html
+++ b/user.html
@@ -207,7 +207,7 @@
               <label for="contact-number">Contact Number:</label>
               <input type="tel" id="contact-number" name="contact-number" placeholder="Phone Number" required />
             
-              <label for="waste-type">Type of Waste Collected:</label>
+              <label style="padding: 3px" for="waste-type">Type of Waste Collected:</label>
               <select id="waste-type" name="waste-type" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #090909; border-radius: 5px; font-size: 16px;">
                 <option value="" disabled selected>Select type of waste</option>
                 <option value="corpses-waste">Corpses Waste</option>
