--- a/user.html
+++ b/user.html
@@ -175,7 +175,7 @@
             <h1 class="sub-title">Contact for Query</h1>
             <p>
               <i class="fa-solid fa-envelope"></i>
-              xyz@gmail.com
+              abhishekchhonkar2002@gmail.com
             </p>
             <p><i class="fa-solid fa-phone"></i> 7568275554</p>
 
