jaggi img added in user

--- a/user.html
+++ b/user.html
@@ -113,7 +113,7 @@
     <!--Locations-->
     <div id="services">
       <div class="container">
-        <h1>Smart Bin locations</h1>
+        <h1 class="sub-title">Smart Bin locations</h1>
         <div class="services-list">
           <div class="loc1">
             <h2>COS</h2>
