--- a/user.html
+++ b/user.html
@@ -98,7 +98,7 @@
     <!-- Locations -->
     <div id="services">
       <div class="container">
-        <h1>Smart Bin locations</h1>
+        <h1 style="font-size: 63px;">Smart Bin Locations</h1>
         <div class="services-list">
           <div class="loc1">
             <h2>COS</h2>
@@ -149,9 +149,9 @@
       <div class="container">
         <div class="row">
           <div class="contact-left">
-            <h1 class="sub-title">Contact for Query</h1>
-            <p><i class="fa-solid fa-envelope"></i> xyz@gmail.com</p>
-            <p><i class="fa-solid fa-phone"></i> 7568275554</p>
+            <h1 class="sub-title">Contact For Query</h1>
+            <p><i class="fa-solid fa-envelope"></i> smartbin@gmail.com</p>
+            <p><i class="fa-solid fa-phone"></i> 8822882200</p>
           </div>
 
           <div class="contact-right">
